Update tcga scraper

--- a/dataset_rec/tcga_scraping.ipynb
+++ b/dataset_rec/tcga_scraping.ipynb
@@ -27,6 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import yaml\n",
     "import time\n",
     "\n",
     "import numpy as np\n",
@@ -39,9 +40,37 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Read Successful\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"apikeys.yaml\", \"r\") as yamlfile:\n",
+    "  keys = yaml.load(yamlfile, Loader=yaml.FullLoader)\n",
+    "  print(\"Read Successful\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "tcga = pd.read_csv(\"tcga_20190225Genes.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tcga_gene = tcga[[\"symbol\"]].dropna().drop_duplicates().values.tolist()"
    ]
   },
   {
@@ -50,60 +79,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tcga_gene = tcga[[\"external_references_ncbi_gene\", \"external_references_ncbi_gene_url\"]].dropna().drop_duplicates()\n",
-    "tcga_gene = tcga_gene[tcga_gene.external_references_ncbi_gene != \"--\"].dropna()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "contact=\"rachit.sabharwal@uth.tmc.edu\"\n",
-    "key=\"\"\n",
-    "Entrez.email = contact\n",
-    "Entrez.api_key = key\n",
-    "handle = Entrez.efetch(db='gene', id=8295, retmode='text')\n",
-    "ayaya = handle.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = open(\"check.txt\", \"a+\")\n",
-    "f.write(ayaya)\n",
-    "f.close()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_pmid(ref_title, contact=\"rachit.sabharwal@uth.tmc.edu\", key=\"\"):\n",
+    "def get_pmid(ref_title, contact, key):\n",
     "    ''' Using the Entrez search term, it queries the eSearch endpoint of the Entrez api to retrieve the corresponding pmids'''\n",
     "    pmid = []\n",
     "    counter = 0\n",
     "    for i in range(len(ref_title)):\n",
-    "        if \"PMID\" not in ref_title:\n",
     "            Entrez.email = contact\n",
     "            Entrez.api_key = key\n",
-    "            handle = Entrez.esearch(db='pubmed', term = ref_title[i], retmax=1)\n",
+    "            handle = Entrez.esearch(db='pubmed', term = ref_title[i], retmax=15)\n",
     "            record = Entrez.read(handle)\n",
     "            pmid.append(record['IdList'])\n",
     "\n",
-    "            if counter == 5:\n",
+    "            if counter == 600:\n",
     "                time.sleep(60)\n",
     "                counter = 0\n",
     "            \n",
     "            counter += 1\n",
     "\n",
     "    return pmid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tcga_pmids = get_pmid(tcga_gene, contact=\"rachit.sabharwal@uth.tmc.edu\", key=keys[\"apikeys\"][\"ncbikey\"][\"key\"])"
    ]
   }
  ]
