Update tcga scraper

--- a/dataset_rec/tcga_scraping.ipynb
+++ b/dataset_rec/tcga_scraping.ipynb
@@ -107,6 +107,25 @@
    "source": [
     "tcga_pmids = get_pmid(tcga_gene, contact=\"rachit.sabharwal@uth.tmc.edu\", key=keys[\"apikeys\"][\"ncbikey\"][\"key\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tcga_pmids_dict = {\"symbol\":tcga_gene, \"external_references_ncbi_pmids\":tcga_pmids}\n",
+    "tcga_pmids_df = pd.DataFrame(tcga_pmids_dict, columns=[\"symbol\", \"external_references_ncbi_pmids\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tcga_pmids_df.to_csv(\"tcga_pmids.csv\", index=False)"
+   ]
   }
  ]
 }
